--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
     <!-- End #mobile-menu-toggle -->
+    <div id="mobile-menu-close">
+        <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+    </div>
+
     <header>
-        <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#lead-overlay">Home</a>
+                <a href="#" id="to-top">Home</a>
             </li>
             <li>
                 <a href="#about">About Us</a>
@@ -39,7 +40,7 @@
                 <a href="#testimonials">Testimonials</a>
             </li>
             <li>
-                <a href="#contact">Book An Appointment</a>
+                <a href="#contact">Contact Us</a>
             </li>
         </ul>
     </header>
@@ -48,7 +49,9 @@
     <!-- Lead-->
     <div id="lead">
         <div id="lead-content">
-            <h3>A Freight Management Company<br></h3>
+            <div class="typewriter">
+                <h3>A Freight Management Company.</h3><br>
+            </div>
             <a href="free-analysis.html" class="btn-rounded-white" target="_blank">Request a Free Analysis</a>
         </div>
         <!-- End #lead-content -->
@@ -76,8 +79,8 @@
                     <p>
                         Empower your business with Transfreight Solutions.<br>
                         <br>
-                        At Transfreight Solutions, we deliver personalized freight solutions designed to meet your specific business needs. With our vast network of third-party suppliers globally, we excel in customer service, supply chain proficiency, integration, and tailored solutions. Trust our team of experts to handle your freight needs, enabling you to focus on your core business endeavors.
-                    </p>
+                        At Transfreight Solutions, we deliver personalized freight solutions designed to meet your specific business needs. With our vast network of third-party suppliers nationally, we excel in customer service, supply chain proficiency, integration, and tailored solutions. Trust our team of experts to handle your freight needs, enabling you to focus on your core business endeavors.
+                    </p>  
                 </div>
             </div>
         </div>
@@ -86,23 +89,23 @@
 
     <!-- Why Us-->
     <div id="why-us">
-        <h3 class="heading-fixed">Why choose us?</h3>
-        <p>Transfright specializes in delivering custom software development solutions to clients worldwide. With over 15 years of experience, we have built a reputation of quality, expertise, and the ability to deliver complex projects on time and on budget.</p>
+        <h3 class="heading-fixed">Why Choose Us?</h3>
+        <p>Transfright specializes in delivering custom freight solutions to clients nationwide. With over 30 years of experience, we have built a reputation of quality, expertise, and the ability to deliver complex projects on time and on budget.</p>
         <div class="grid-container2">
-            <div  class="grid-item">
-                <h2><5s</h2>
-                <p>Customer Service Response Time</p>
+            <div class="grid-item">
+                <h2><span>6</span>m</h2>
+                <p>Average Ticket Response Time</p>
             </div>
-            <div  class="grid-item">
-                <h2>15+</h2>
+            <div class="grid-item">
+                <h2><span>30</span>+</h2>
                 <p>Years of Experience</p>
             </div>
-            <div  class="grid-item">
-                <h2>100+</h2>
-                <p>Actieve Customers</p>
+            <div class="grid-item">
+                <h2><span id>100</span>+</h2>
+                <p>Active Customers</p>
             </div>
-            <div  class="grid-item">
-                <h2>35M+</h2>
+            <div class="grid-item">
+                <h2><span>2</span>M+</h2>
                 <p>Shipments Delivered</p>
             </div>
         </div>
@@ -186,7 +189,6 @@
     </div>
     <!-- End #experience -->
 
-
     <!-- Testimonials-->
     <div id="testimonials">
         <h3 class="heading-fixed">Customer Testimonials</h3>
@@ -234,7 +236,7 @@
 
     <!-- Contact-->
     <div id="contact">
-        <h3 class="heading-fixed">Book An Appointment<br></h3>
+        <h3 class="heading-fixed">Book An Appointment</h3>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/f/xoqzvqok">
                 <input type="hidden" name="_subject" value="Contact request from transfreight.com.au" />
@@ -242,7 +244,7 @@
                     <select name="appointment_type" id="appointment_type" required>
                         <option value="">Select Appointment Type (required)</option>
                         <option value="phone_consultation">15 minutes phone consultation</option>
-                        <option value="face_to_face">Face to face appointment</option>
+                        <option value="face_to_face">Face to face appointment (Video Call)</option>
                     </select>
                     <input type="date" name="appointment_date" id="appointment_date" required>
                 </div>
@@ -282,15 +284,20 @@
                         <li>
                             <a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
+                        <li>
+                            <a href="mailto:sales@transfreight.com.au"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                        </li>
                     </ul>
-                </div>
+                </div>                
             </div>
         </div>
     </footer>
     <!-- End footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <script src="js/hover-scripts.js"></script>
 </body>
 
 </html>
