--- a/envelope/envelope.html
+++ b/envelope/envelope.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="test.css" rel="stylesheet">
+  <link href="envelope.css" rel="stylesheet">
 </head>
 
 <body>
