--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="envelope/envelope.css" rel="stylesheet">
 </head>
 
 <body>
@@ -49,10 +50,27 @@
     <!-- Lead-->
     <div id="lead">
         <div id="lead-content">
-            <div class="typewriter">
-                <h3>A Freight Management Company.</h3><br>
-            </div>
-            <a href="free-analysis.html" class="btn-rounded-white" target="_blank">Request a Free Analysis</a>
+            <a href="free-analysis.html">
+                <div class="letter-image">
+                    <div class="animated-mail">
+                    <div class="back-fold"></div>
+                    <div class="letter">
+                        <div class="letter-border"></div>
+                        <div class="letter-context">Request Free Analysis</div>
+                        <div class="letter-stamp">
+                        <div class="letter-stamp-inner"></div>
+                        </div>
+                    </div>
+                    <div class="top-fold"></div>
+                    <div class="body"></div>
+                    <div class="left-fold"></div>
+                    </div>
+                    <div class="shadow"></div>
+                </div>
+            </a>
+        </div>
+        <div class="typewriter">
+            <h3>A Freight Management Company.</h3><br>
         </div>
         <!-- End #lead-content -->
 
@@ -93,19 +111,19 @@
         <p>Transfright specializes in delivering custom freight solutions to clients nationwide. With over 30 years of experience, we have built a reputation of quality, expertise, and the ability to deliver complex projects on time and on budget.</p>
         <div class="grid-container2">
             <div class="grid-item">
-                <h2><span>6</span>m</h2>
+                <h2>6m</h2>
                 <p>Average Ticket Response Time</p>
             </div>
             <div class="grid-item">
-                <h2><span>30</span>+</h2>
+                <h2>30+</h2>
                 <p>Years of Experience</p>
             </div>
             <div class="grid-item">
-                <h2><span id>100</span>+</h2>
+                <h2>100+</h2>
                 <p>Active Customers</p>
             </div>
             <div class="grid-item">
-                <h2><span>2</span>M+</h2>
+                <h2>2M+</h2>
                 <p>Shipments Delivered</p>
             </div>
         </div>
