--- a/free-analysis.html
+++ b/free-analysis.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Transfreight Solutions Australia</title>
+        <title>Free Analysis</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link href="<link rel=" preconnect" href="https://fonts.googleapis.com">
@@ -41,9 +41,11 @@
                         <a href="#">Home</a>
                         <a href="index.html/#why-us">About</a>
                         <a href="#">Testimonials</a>
-                        <a href="#">Book Appointment</a>
+                        <a href="#">Book an Appointment</a>
                 </div>
-                <button href="free-analysis.html" class="free-analysis-button">Free Analysis</button>
+                <a href="free-analysis.html">
+                        <button class="free-analysis-button">Free Analysis</button>
+                </a>
         </div>
         <!-- End header -->
 
