--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--https://sepehrmoghani.github.io/devportfolio/-->
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
@@ -20,6 +21,7 @@
     <link href="css/submit.css" rel="stylesheet">
     <link href="css/rotating-text.css" rel="stylesheet">
     <link href="css/enquiry-button.css" rel="stylesheet">
+    <link href="css/quick-contact.css" rel="stylesheet">
 </head>
 
 <body>
@@ -39,26 +41,45 @@
         </div>
         <div class="menu">
             <a href="#">Home</a>
-            <a href="#about">About</a>
+            <a href="index.html/#why-us">About</a>
             <a href="#">Testimonials</a>
-            <a href="#">Book Appointment</a>
+            <a href="#">Book an Appointment</a>
         </div>
-        <button href="free-analysis.html" class="free-analysis-button">Free Analysis</button>
+        <a href="free-analysis.html">
+            <button class="free-analysis-button">Free Analysis</button>
+        </a>
     </div>
 
-    <!-- End header -->
+    <!-- End Title -->
 
-    <div class="fade-in">
-        <div class="container">
-            <div class="box">
-                <div class="title">
-                    <span class="block"></span>
-                    <h1>Transfreight Solutions Australia<span></span></h1>
+    <div class="landing-page">
+        <div class="landing-page-content">
+            <div id="head-overlay"></div>
+            <h1>Excellence is our<br>Unwavering Standard</h1>
+            <p>Our mission here at Transfreight is to navigate the issues of modern day freight and logistics,
+                while giving you clear visibility on your very own custom and tailored strategy.
+                <br>
+                Transfreight partners with selected clients, vertically integrate and become an extension of
+                their supply chain strategy. We are robust, trustworthy and have the capabilities to pivot and
+                adjust when required.
+            </p>
+        </div>
+        <br>
+        <div class="quick-container">
+            <span class="btn btn--keanu">Contact Us</span>
+            <div class="quick-contact">
+                <div class="quick-hidden">
+                    <div class="plus-item">+</div>
                 </div>
-                <div class="role">
-                    <div class="block"></div>
-                    <p>A Freight Management Company</p>
-                </div>
+                <p class="title">Contact Form</p>
+                <form method="POST" action="https://formspree.io/f/xoqzvqok">
+                    <input type="hidden" name="_subject" value="Contact request from transfreight.com.au" />
+                    <input type="text" name="name" placeholder="Your Name" required>
+                    <input type="tel" name="phone" placeholder="Phone" required>
+                    <input type="email" name="_replyto" placeholder="Your Email" required>
+                    <textarea name="message" placeholder="Your Enquiry" required></textarea>
+                    <button class="btn" type="submit">Submit</button>
+                </form>
             </div>
         </div>
     </div>
@@ -75,9 +96,11 @@
                 <p>
                     Empower your business with Transfreight Solutions.<br>
                     <br>
-                    At Transfreight Solutions, we deliver personalized freight solutions designed to meet your specific
+                    At Transfreight Solutions, we deliver personalized freight solutions designed to meet your
+                    specific
                     business needs. With our vast network of third-party suppliers nationally, we excel in customer
-                    service, supply chain proficiency, integration, and tailored solutions. Trust our team of experts to
+                    service, supply chain proficiency, integration, and tailored solutions. Trust our team of
+                    experts to
                     handle your freight needs, enabling you to focus on your core business endeavors.
                 </p>
             </div>
@@ -88,8 +111,10 @@
     <!-- Why Us-->
     <div id="why-us">
         <h3 class="heading-fixed">Why Choose Us?</h3>
-        <p>Transfright specializes in delivering custom freight solutions to clients nationwide. With over 30 years of
-            experience, we have built a reputation of quality, expertise, and the ability to deliver complex projects on
+        <p>Transfright specializes in delivering custom freight solutions to clients nationwide. With over 30 years
+            of
+            experience, we have built a reputation of quality, expertise, and the ability to deliver complex
+            projects on
             time and on budget.</p>
         <div class="grid-container2">
             <div class="grid-item">
@@ -119,103 +144,67 @@
     <!-- Experience-->
     <div class="experience">
         <div class="hover-text">
-            <h2>Tailored Solutions</h2>
+            <h2>Simplify complex rate cards</h2>
             <div class="text">
                 <div class="inner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate tortor sit amet felis
-                        accumsan,
-                        at
-                        ornare diam placerat. Cras bibendum lobortis quam ut venenatis. Mauris eu mi in erat sagittis
-                        cursus.
-                        Vivamus
-                        in euismod diam, et interdum odio. Suspendisse vel rhoncus metus, eu auctor neque. Lorem ipsum
-                        dolor sit
-                        amet.
+                    <p>Say goodbye to manually calculating rates. Simply load your rates into the system and iConsignit
+                        will automatically calculate your quotes and invoices based on the events and triggers you want.
+                        Now, you can quite literally calculate complex rate cards in your sleep.
                     </p>
                 </div>
             </div>
         </div>
         <div class="hover-text">
-            <h2>Business Analysis</h2>
+            <h2>Online access for better visibility</h2>
             <div class="text">
                 <div class="inner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate tortor sit amet felis
-                        accumsan,
-                        at
-                        ornare diam placerat. Cras bibendum lobortis quam ut venenatis. Mauris eu mi in erat sagittis
-                        cursus.
-                        Vivamus
-                        in euismod diam, et interdum odio. Suspendisse vel rhoncus metus, eu auctor neque. Lorem ipsum
-                        dolor sit
-                        amet.
+                    <p>Access data whenever you need. Our cloud-based system is designed to keep your records up to date
+                        at all times, with electronic proof of delivery, automated invoicing and driver tracking, you
+                        can keep eyes on your operations at all times. Plus your clients can have greater transparency
+                        with online access.
                     </p>
                 </div>
             </div>
         </div>
         <div class="hover-text">
-            <h2>Customer Care</h2>
+            <h2>Electronic Proof of Deliveries</h2>
             <div class="text">
                 <div class="inner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate tortor sit amet felis
-                        accumsan,
-                        at
-                        ornare diam placerat. Cras bibendum lobortis quam ut venenatis. Mauris eu mi in erat sagittis
-                        cursus.
-                        Vivamus
-                        in euismod diam, et interdum odio. Suspendisse vel rhoncus metus, eu auctor neque. Lorem ipsum
-                        dolor sit
-                        amet.
+                    <p>No more lost POD's, our electronic proof of delivery feature makes recording consignments simple
+                        and accurate. Drivers can record waiting times, document damaged stock with images, temperatures
+                        and much more.
                     </p>
                 </div>
             </div>
         </div>
         <div class="hover-text">
-            <h2>Industry Knowledge</h2>
+            <h2>Simple setup and onboarding</h2>
             <div class="text">
                 <div class="inner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate tortor sit amet felis
-                        accumsan,
-                        at
-                        ornare diam placerat. Cras bibendum lobortis quam ut venenatis. Mauris eu mi in erat sagittis
-                        cursus.
-                        Vivamus
-                        in euismod diam, et interdum odio. Suspendisse vel rhoncus metus, eu auctor neque. Lorem ipsum
-                        dolor sit
-                        amet.
+                    <p>iConsignit lets you do more with less — and with simple set up and onboarding support from
+                        people who actually understand the industry, you can have your customers and team logged in, in
+                        no time.
                     </p>
                 </div>
             </div>
         </div>
         <div class="hover-text">
-            <h2>Integration</h2>
+            <h2>Software integrations</h2>
             <div class="text">
                 <div class="inner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate tortor sit amet felis
-                        accumsan,
-                        at
-                        ornare diam placerat. Cras bibendum lobortis quam ut venenatis. Mauris eu mi in erat sagittis
-                        cursus.
-                        Vivamus
-                        in euismod diam, et interdum odio. Suspendisse vel rhoncus metus, eu auctor neque. Lorem ipsum
-                        dolor sit
-                        amet.
+                    <p>Easy manage on-forwarding, cross docking, B2B and B2C operations from the one place, with
+                        software integrations designed for logistics companies.
                     </p>
                 </div>
             </div>
         </div>
         <div class="hover-text">
-            <h2>Independent Advisor</h2>
+            <h2>Automated allocations</h2>
             <div class="text">
                 <div class="inner">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate tortor sit amet felis
-                        accumsan,
-                        at
-                        ornare diam placerat. Cras bibendum lobortis quam ut venenatis. Mauris eu mi in erat sagittis
-                        cursus.
-                        Vivamus
-                        in euismod diam, et interdum odio. Suspendisse vel rhoncus metus, eu auctor neque. Lorem ipsum
-                        dolor sit
-                        amet.
+                    <p>Allocate your consignments with ease. Simply set up delivery runs and allocate postcodes in
+                        CartonCloud, and the system will automatically build delivery runs as soon as consignments are
+                        created.
                     </p>
                 </div>
             </div>
@@ -238,14 +227,16 @@
             <div class="box">
                 <h2>Customer Testimonial 2</h2>
                 <p>
-                    By utilizing our bulk buying power we are able to reduce your total transport costs. Partnering with
+                    By utilizing our bulk buying power we are able to reduce your total transport costs. Partnering
+                    with
                     renowned carriers, we offer cost-effective and efficient supply chain solutions.
                 </p>
             </div>
             <div class="box">
                 <h2>Customer Testimonial 3</h2>
                 <p>
-                    Work with our team of Australian based freight specialists, to receive exceptional service that sets
+                    Work with our team of Australian based freight specialists, to receive exceptional service that
+                    sets
                     the industry standard for quality and service.
                 </p>
             </div>
@@ -259,7 +250,8 @@
             <div class="box">
                 <h2>Customer Testimonial 5</h2>
                 <p>
-                    Unify your business systems with our software to create a seamless solution that streamlines your
+                    Unify your business systems with our software to create a seamless solution that streamlines
+                    your
                     operations.
                 </p>
             </div>
@@ -312,7 +304,8 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2024</span> <br>Transfreight Solutions Australia <br>
+                        Copyright &copy; <span id="current-year">2024</span> <br>Transfreight Solutions Australia
+                        <br>
                         All Rights Reserved.
                     </p>
                 </div>
@@ -346,6 +339,7 @@
     <script src="js/scripts.min.js"></script>
     <script src="js/rotating-text.js"></script>
     <script src="js/lead.js"></script>
+    <script src="js/quick-contact.js"></script>
 
 </body>
 
