--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
         <div class="menu">
             <a href="#">Home</a>
-            <a href="index.html/#why-us">About</a>
-            <a href="#">Testimonials</a>
-            <a href="#">Book an Appointment</a>
+            <a href="#why-us">About</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#contact">Book an Appointment</a>
         </div>
         <a href="free-analysis.html">
             <button class="free-analysis-button">Free Analysis</button>
