--- a/free-analysis.html
+++ b/free-analysis.html
@@ -1,3 +1,4 @@
+<!--https://sepehrmoghani.github.io/devportfolio/-->
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
@@ -14,12 +15,9 @@
         <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
-        <link href="css/envelope.css" rel="stylesheet">
-        <link href="css/text-flip.css" rel="stylesheet">
-        <link href="css/text-fadein.css" rel="stylesheet">
         <link href="css/submit.css" rel="stylesheet">
-        <link href="css/rotating-text.css" rel="stylesheet">
         <link href="css/enquiry-button.css" rel="stylesheet">
+        <link href="css/quick-contact.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,15 +35,6 @@
                                 <img src="images/tsa_logo.png" alt="Company Logo" height="50">
                         </a>
                 </div>
-                <div class="menu">
-                        <a href="#">Home</a>
-                        <a href="index.html/#why-us">About</a>
-                        <a href="#">Testimonials</a>
-                        <a href="#">Book an Appointment</a>
-                </div>
-                <a href="free-analysis.html">
-                        <button class="free-analysis-button">Free Analysis</button>
-                </a>
         </div>
         <!-- End header -->
 
@@ -65,19 +54,9 @@
                         <input type="tel" name="phone" placeholder="Phone (required)" required>
                         <input type="email" name="_replyto" placeholder="Your Email (required)" required>
 
-                        <label for="question1">What are your savings goals?</label><input type="text" id="question1"
-                                name="question1">
-                        <label for="question2">What are you looking to achieve by moving to Transfreight?</label><input
-                                type="text" id="question2" name="question2">
-                        <label for="question3">Any carrier you will not use and why?</label><input type="text"
-                                id="question3" name="question3">
-                        <label for="question4">Are you open to using multiple carriers?</label><input type="text"
-                                id="question4" name="question4">
-                        <label for="question5">Do you currently use a manage freight software?</label><input type="text"
-                                id="question5" name="question5">
                         <br>
-                        <p class="grid-item">Kindly submit a month or more of freight invoices for your comprehensive
-                                analysis.</p>
+                        <p class="grid-item"><b>Kindly submit a month or more of freight invoices for your comprehensive
+                                        analysis.</b></p>
                         <label for="fileUpload" class="file-upload-label grid-item">Choose File</label>
                         <input type="file" name="fileUpload" id="fileUpload" accept="image/*, .pdf, .doc, .docx"
                                 class="file-upload grid-item">
@@ -217,6 +196,14 @@
                         </div><br>
                         <textarea name="message" placeholder="Your Message" required></textarea>
                         <!--<button type="submit">Submit</button>-->
+                        <div class="name-fields">
+                                <select name="appointment_type" id="appointment_type" required>
+                                        <option value="">Call Back Type</option>
+                                        <option value="phone_consultation">Phone consult</option>
+                                        <option value="face_to_face">Face to face appointment (Video Call)</option>
+                                </select>
+                                <input type="date" name="appointment_date" id="appointment_date" required>
+                        </div>
                         <div class="submit-button">
                                 <button class="btn" type="submit"><span>Submit</span><img
                                                 src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="30"
@@ -226,39 +213,41 @@
         </div>
 
         <footer>
-                <div class="container">
-                        <div class="row">
-                                <div class="col-sm-5 copyright">
-                                        <p>
-                                                Copyright &copy; <span id="current-year">2024</span> <br>Transfreight
-                                                Solutions Australia <br>
-                                                All Rights Reserved.
-                                        </p>
-                                </div>
-                                <div class="col-sm-2 top">
-                                        <span id="to-top">
-                                                <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                        </span>
-                                </div>
-                                <div class="col-sm-5 social">
-                                        <ul>
-                                                <li>
-                                                        <a href="https://www.linkedin.com/" target="_blank"><i
-                                                                        class="fa fa-linkedin"
-                                                                        aria-hidden="true"></i></a>
-                                                </li>
-                                                <li>
-                                                        <a href="#" target="_blank"><i class="fa fa-facebook"
-                                                                        aria-hidden="true"></i></a>
-                                                </li>
-                                                <li>
-                                                        <a href="mailto:sales@transfreight.com.au"><i
-                                                                        class="fa fa-envelope"
-                                                                        aria-hidden="true"></i></a>
-                                                </li>
-                                        </ul>
-                                </div>
-                        </div>
+                <div class="footer-column">
+                        <h3>Navigation</h3>
+                        <br>
+                        <ul class="navigation">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="#">Services</a></li>
+                                <!-- Add more navigation links as needed -->
+                        </ul>
+                </div>
+                <div class="footer-column">
+                        <h3>Resources</h3>
+                        <br>
+                        <ul class="resources">
+                                <li><a href="faq.html">FAQ</a></li>
+                                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                <li><a href="#">Terms and Conditions</a></li>
+                                <!-- Add more resource links as needed -->
+                        </ul>
+                </div>
+                <div class="footer-column">
+                        <h3>Social Media</h3>
+                        <br>
+                        <ul class="social-media">
+                                <li><a href="#">LinkedIn</a></li>
+                                <li><a href="#">Facebook</a></li>
+                                <!-- Add more social media links as needed -->
+                        </ul>
+                </div>
+                <div class="copyright">
+                        <p>
+                                Copyright &copy; <span id="current-year">2024</span> Transfreight Solutions Australia
+                                All Rights
+                                Reserved.
+                        </p>
                 </div>
         </footer>
         <!-- End footer -->
