--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/envelope.css" rel="stylesheet">
-    <link href="css/text-flip.css" rel="stylesheet">
-    <link href="css/text-fadein.css" rel="stylesheet">
     <link href="css/submit.css" rel="stylesheet">
-    <link href="css/rotating-text.css" rel="stylesheet">
     <link href="css/enquiry-button.css" rel="stylesheet">
     <link href="css/quick-contact.css" rel="stylesheet">
 </head>
@@ -41,12 +37,12 @@
         </div>
         <div class="menu">
             <a href="#">Home</a>
-            <a href="#why-us">About</a>
+            <a href="about-us.html">About Us</a>
             <a href="#testimonials">Testimonials</a>
             <a href="#contact">Book an Appointment</a>
         </div>
         <a href="free-analysis.html">
-            <button class="free-analysis-button">Free Analysis</button>
+            <button class="free-analysis-button">Request Free Analysis</button>
         </a>
     </div>
 
@@ -300,36 +296,41 @@
     <!-- End #contact -->
 
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-5 copyright">
-                    <p>
-                        Copyright &copy; <span id="current-year">2024</span> <br>Transfreight Solutions Australia
-                        <br>
-                        All Rights Reserved.
-                    </p>
-                </div>
-                <div class="col-sm-2 top">
-                    <span id="to-top">
-                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    </span>
-                </div>
-                <div class="col-sm-5 social">
-                    <ul>
-                        <li>
-                            <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"
-                                    aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="mailto:sales@transfreight.com.au"><i class="fa fa-envelope"
-                                    aria-hidden="true"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <div class="footer-column">
+            <h3>Navigation</h3>
+            <br>
+            <ul class="navigation">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <!-- Add more navigation links as needed -->
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>Resources</h3>
+            <br>
+            <ul class="resources">
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <!-- Add more resource links as needed -->
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>Social Media</h3>
+            <br>
+            <ul class="social-media">
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Facebook</a></li>
+                <!-- Add more social media links as needed -->
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>
+                Copyright &copy; <span id="current-year">2024</span> Transfreight Solutions Australia
+                All Rights
+                Reserved.
+            </p>
         </div>
     </footer>
     <!-- End footer -->
