--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <h3>Resources</h3>
             <br>
             <ul class="resources">
-                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 <li><a href="#">Terms and Conditions</a></li>
                 <!-- Add more resource links as needed -->
