--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -18,6 +18,7 @@
     <link href="css/submit.css" rel="stylesheet">
     <link href="css/enquiry-button.css" rel="stylesheet">
     <link href="css/quick-contact.css" rel="stylesheet">
+    <link href="css/text-fadein.css" rel="stylesheet">
 </head>
 
 <body>
@@ -48,51 +49,61 @@
 
     <!-- End Title -->
 
+    <div class="fade-in">
+        <div class="container">
+            <div class="box">
+                <div class="title">
+                    <div class="block"></div>
+                    <h1>Privacy Policy
+                        <span></span>
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="privacy-policy">
-        <h1>Privacy Policy</h1>
-        <p><b>Transfreight Privacy Policy</b><br>
-            Transfreight Solutions Australia Pty Ltd ABN 36 144 812 537 provides this statement as part of its
+        <h2>Transfreight Privacy Policy</h2>
+        <p>Transfreight Solutions Australia Pty Ltd ABN 36 144 812 537 provides this statement as part of its
             commitment to user privacy. It details how Transfreight collects and uses personal information within its
-            business and how Transfreight customers can access their own personal information.<br>
+            business and how Transfreight customers can access their own personal information.
             <br>
             The Policy of Transfreight is to comply fully with the Australian Privacy principles for the fair handling
-            of personal information as set out in the Privacy Act 1988 (Cwth) (“Privacy Act”).<br>
-            <br>
-            <b>Personal Information</b><br>
-            Examples of customer information that Transfreight collects includes names, information on shipments,
+            of personal information as set out in the Privacy Act 1988 (Cwth) (“Privacy Act”).
+        </p>
+        <h2>Personal Information</h2>
+        <p>Examples of customer information that Transfreight collects includes names, information on shipments,
             address, email address, contact personnel, ABN details and telephone numbers. Some of the information
-            Transfreight collects is data which relates to an identifiable person.<br>
-            <br>
-            <b>Collection Purpose</b><br>
-            Transfreight uses information about its customers and their transport activity to provide or enhance the
+            Transfreight collects is data which relates to an identifiable person.</p>
+        <h2>Collection Purpose</h2>
+        <p>Transfreight uses information about its customers and their transport activity to provide or enhance the
             services it makes available to customers, to communicate with customers about additional services they may
             find of value and to assist Transfreight’s legitimate business interests. For example, the setting of credit
             arrangements and recording payments. Transfreight may also use information for compliance with Government
-            regulation applicable to the transport and freight brokerage industry.<br>
-            <br>
-            <b>Retention</b><br>
-            Any personal information Transfreight collects will be used solely for the purpose of providing its services
+            regulation applicable to the transport and freight brokerage industry.</p>
+        <h2>Retention</h2>
+        <p>Any personal information Transfreight collects will be used solely for the purpose of providing its services
             or as otherwise described in this statement and it will not store it for any longer period than is legally
-            permissible and required for this purpose.<br>
-            <br>
-            <b>Disclosure</b><br>
-            The utilisation of personal data and collection of personal data from customers will be used primarily for
+            permissible and required for this purpose.</p>
+        <h2>Disclosure</h2>
+        <p>The utilisation of personal data and collection of personal data from customers will be used primarily for
             the purposes set out above. Transfreight may also disclose such data to a credit reporting agency pursuant
-            to Part 111A of the Privacy Act, in relation to any application to Transfreight for finance or credit.<br>
+            to Part 111A of the Privacy Act, in relation to any application to Transfreight for finance or credit.
             <br>
             Except to the extent set out above Transfreight does not share, sell, transfer or otherwise disseminate
             personal information unless required by law or required for the purpose of an agreement with a particular
-            customer or unless a customer has given express consent so to do.<br>
-            <br>
-            <b>Access to Data</b><br>
-            Customers can ascertain the particular information being held by contacting us through this website.
+            customer or unless a customer has given express consent so to do.
+        </p>
+        <h2>Access to Data</h2>
+        <p>Customers can ascertain the particular information being held by contacting us through this website.
             Transfreight will acknowledge your request within three (3) weeks. If Transfreight is prevented from
             disclosing personal information we will give reasons for such refusal. To keep personal information
             accurate, please contact Transfreight in respect of any incorrect information so that our records can be
-            updated.<br>
-            <br>
-            <b>Acknowledgement of Customers Consent</b><br>
-            Customers consent to Transfreight using customers personal information for the purposes, uses and
+            updated.
+        </p>
+
+        <h2>Acknowledgement of Customers Consent</h2>
+        <p>Customers consent to Transfreight using customers personal information for the purposes, uses and
             disclosures described in this statement. By using this website and / or contracting with Transfreight, you
             acknowledge providing consent to disclosure and the use of personal information, as set out in the statement
             including for any authorised purpose under Part IIIA of the Privacy A
@@ -114,7 +125,7 @@
             <h3>Resources</h3>
             <br>
             <ul class="resources">
-                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 <li><a href="#">Terms and Conditions</a></li>
                 <!-- Add more resource links as needed -->
